Issue grid-wrapper not wrapping last two sections

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -78,7 +78,6 @@ body {
 
 .msgCloseBtn {
    padding: 10px;
-   border: 1px solid red;
 }
 
 .msgCloseBtn:hover {
@@ -219,11 +218,9 @@ main {
    display: flex;
    flex-direction: column;
    align-items: center;
-   border: 2px solid red;
 }
 
 .dash-title-container {
-   border: 2px solid red;
 }
 
 .dash-title {
@@ -238,7 +235,6 @@ main {
    display: flex;
    justify-content: flex-end;
    align-items: center;
-   border: 2px solid red;
 }
 
 .header-search-container i {
@@ -269,7 +265,6 @@ main {
    display: flex;
    justify-content: center;
    align-items: center;
-   border: 2px solid red;
 }
 
 .alert-bar {
@@ -313,7 +308,6 @@ main {
    display: flex;
    flex-direction: column;
    align-items: center;
-   //  border: 2px solid red;
 }
 
 .title-traffic {
@@ -356,17 +350,18 @@ main {
    grid-template-areas:
       "daily"
       "mobile";
-   // border: 2px solid red;
 }
 
 .daily-traffic-container {
    grid-area: daily;
    padding-left: 8px;
+   border: 2px solid #ddd;
 }
 
 .mobile-users-container {
    grid-area: mobile;
-   padding-right: 25px;
+   // padding-right: 25px;
+   border: 2px solid #ddd;
 }
 
 .mobile-users-title,
@@ -386,7 +381,6 @@ main {
    grid-template-rows: repeat(3, 85px);
    justify-content: center;
    row-gap: 15px;
-   // border: 2px solid red;
 }
 
 .social-header {
@@ -440,15 +434,16 @@ main {
   -------------------------------------------------- */
 
 .grid-wrapper {
+   width: 100%;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
+   border: 2px solid red;
 }
 
-//  .box {
-//    height: 300px;
-//    border: 1px solid red;
-//  }
+.members-container {
+   border: 2px solid #eee;
+}
 
 .member-header {
    padding: 10px;
@@ -459,6 +454,7 @@ main {
 }
 
 .member-info {
+   border-bottom: 1px solid #ddd;
    margin-bottom: 10px;
    height: 100px;
    display: grid;
@@ -559,7 +555,7 @@ main {
 
    .mobile-users-container {
       margin-top: 0;
-      padding-bottom: 20px;
+      // padding-bottom: 20px;
 
       // width: 100%;
    }
